  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format) and do not
    use tabs but use spaces for formatting
  * accompany each entry with github issue/PR number (Issue #xyz)
  * release numbers follow "Semantic Versioning" http://semver.org

------------------------------------------------------------------------------
??/??/?? IAlibay, Luthaf, hmacdope

 * 2.4.0

Fixes
  * Upgrade to chemfiles 0.10.3 (Issue #3798)

Enhancements
  * Added benchmarks for bonds topology attribute (Issue #3785, PR #3806)


Changes
  * The "AMBER" entry in setup.py's extra_requires has now been removed. Please
    use `pip install ./package[extra_formats]` instead (PR #3810)

Deprecations


08/29/22 IAlibay, PicoCentauri, orbeckst, hmacdope, rmeli, miss77jun, rzhao271,
         yuxuanzhuang, hsadia538, lilyminium

 * 2.3.0

Fixes
  * Fixes awk call in deploy.yaml tests for macos runners (Issue #3693)
  * add a 0.5 for correct midpoints in hole analysis (Issue #3715)
  * Fix reading error when PDB CONECT records are corrupt. (Issue #988)
  * Fix writing unusable PDB CONECT records with index>100000. (Issue #988)

Enhancements
  * Add a new `formalcharge` attribute for storing formal charges (PR #3755)
  * Add the ability to read & write formal charges from PDB files (PR #3755)
  * Change functions in `lib.distances` to accept AtomGroups as well as NumPy
    arrays (CZI Performance track PR #3730)
  * Add `norm` parameter to InterRDF, InterRDF_s to normalize as rdf,
    number density or do not normalize at all. (Issue #3687)
  * Additional logger.info output when per-frame analysis starts (PR #3710)
  * Timestep has been converted to a Cython Extension type
    (CZI Performance track, PR #3683)
  * Refactor make_downshift_arrays with vector operation in numpy(PR #3724)
  * Optimize topology serialization/construction by lazy-building _RA and _SR.

Changes
  * To add additional optional packages for different file formats when